prevent wrap on building details values, #26

--- a/src/styles/main/_scorecard.scss
+++ b/src/styles/main/_scorecard.scss
@@ -299,6 +299,7 @@ $steam-color: #f7c34e;
 
           div#building-details-values {
             min-width: 225px;
+            white-space: nowrap;
           }
         }
       }
